<resources>
    <string name="title_1">၁။အညီအမျှ</string>
    <string name="rdo_very_funny">အရမ်းရီရတယ်</string>
    <string name="rdo_funny">ရီရတယ်</string>
    <string name="joke_text_1">နောက်တစ်နှစ်ပေါ့လင်မယား ၂ ယောက်စကားများရန်ဖြစ်ရာမှကွာရှင်းပြတ်ဆဲရန်တရားရုံးတွင်စီစဉ်နေကြသည် တရားသူကြီး : မင်းတို့မှာကလေး ၃ ယောက်ရှိတာဘယ်လိုခွဲမလဲ? လင်မယား ၂ ယောက်တွေဝေသွားပြီးမိနစ်အနည်းငယ်ကြာစဉ်းစားကာ \'တရားသူကြီးမင်းခင်ဗျား ကျနော်တို့တစ်နှစ်တာအချိန်အတွင်းနောက်တစ်ယောက်ထပ်မွေးပြီးပြန်လာခဲ့ပါ့မယ်\' ဟုပြောလိုက်သည်။ ၉ လခန့်ကြာသော် အမြွှာပူးလေးမွေးလေသည်။</string>
    <string name="btn_previous">အရင်ဟာပြပါ</string>
    <string name="btn_next">နောက်တစ်ခု</string>
    <string name="title_2">၂။အလျှင်မလိုပါ</string>
    <string name="joke_text_2">ပြေးနေသော ပီတာလေး နောက်ကို ရဲသား တစ်ဦး ပြေးလိုက်နေသည်ကို၊ လမ်းထောင့်တွင်ရပ်နေသော ရဲမှုးကြီး တွေ့သဖြင့် လှမ်းမေးလိုက်သည်။  \"ဟေ့ . .ရဲသား . . မင်းဘာလို့ ဟိုကလေး နောက်ကို အတင်း ပြေးလိုက်နေရတာလဲ\" \"သူ ကျွန်တော့်ကို . . နောက် ဆယ့်ငါးမိနစ်ကြာရင် ဖင်ကို လာနမ်းလှည့်လို့ ပြောလို့ပါ ရဲမှုးကြီး\" \"နောက်ဆယ့်ငါးမိနစ်မှဆို အချိန်ရသားပဲ၊ ဘာလို့ အတင်းပြေးလိုက်နေတာလဲ\"</string>
    <string name="title_3">၃။တိုင်းပြည်ကို ချောက်ထဲမကျအောင် ကယ်လိုက်လို့ပါ</string>
    <string name="joke_text_3">ဆင်းရဲရာမှ အလွန်ချမ်းသာလာသော သဌေးများကို သတင်းတစ်ခုမှ အင်တာဗျူးသည်။\nU.S သဌေး။ ။ ကျွန်တော် နယူးယောက်ကိုစရောက်တုန်းက တော်တော်ဆင်းရဲတာဗျ။ လက်ထဲမှာ ဆင့် ၅၀ ပဲပါတာနဲ့ ပန်းသီးတစ်လုံးဝယ်တယ်။ ၁ ဒေါ်လာနဲ့ပြန်ရောင်းတယ်။ နောက်ပန်းသီးနှစ်လုံး ဝယ်တယ် ထပ်ရောင်းတယ်\nသတင်းထောက်။ ။ ဒီလိုနဲ့များလာတာပေါ့\nU.S သဌေး။ ။ မဟုတ်ဘူးဗျ ပန်းသီးရောင်းနေရင်း အဒေါ်ဆုံးသွားလို့ ဒေါ်လာတစ်သန်း အမွေရတယ်လေ \n---------------------------------------\n Russia သဌေး။ ။ ကျွန်တော်အခုနေတဲ့ စံအိမ်ကြီးက အရင်က ကျွန်တော် ဒရိုက်ဘာလုပ်ခဲ့တာပေါ့။\nသတင်းထောက်။ ။ အော် ဒရိုက်ဘာဘဝကနေ သဌေးဖြစ်အောင် ဘယ်လိုလုပ်ခဲ့ရလဲ။\nRussia သဌေး။ ။ စံအိမ်ပိုင်ရှင်သဌေးကြီးရဲ့ သမီးနဲ့ညားသွားတယ်လေ \n---------------------------------------\n သတင်းထောက်စိတ်ပျက်လက်ပျက်နှင့်မြန်မာနိုင်ငံရောက်လာသည်။\nသတင်းထောက်။ ။ ဟိုလေ ခုလို ကျိကျိတက်ချမ်းသာလာတာဘယ်လိုချမ်းသာလာလဲသိချင်လို့ပါ။ ဘဘကြီး လက်ထဲက ဖတ်လက်စ စာအုပ်ကိုချပြီး မျက်မှောင်ကြုံ့ကြည့်သည်။\nဘဘကြီး။ ။ ဒါကရှင်းပါတယ်။ တိုင်းပြည်ချောက်ထဲမကျအောင် ကယ်လိုက်ပါတယ်</string>

    <string name="app_name">Har-Tha-Pa-Day-Thar</string>
    <string name="app_name_mm">ဟာသပေဒသာ</string>

    <string name="action_settings">Settings</string>
    <string name="action_share">Share the Joke</string>

    <!-- Home Screen Controls -->
    <string name="lbl_previous_joke">အရင္ဟာ ျပပါ</string>
    <string name="lbl_next_joke">ေနာက္တစ္ခု</string>

    <string name="joke_one_title">အညီအမၽွ</string>
    <string name="joke_one_content">ေနာက္တစ္ႏွစ္ေပါ့ လင္မယား ၂ ေယာက္စကားမ်ားရန္ျဖစ္ရာမွကြာရွင္းျပတ္ဆဲရန္တရား႐ုံးတြင္စီစဥ္ေနၾကသည္
တရားသူႀကီး : မင္းတို႔မွာကေလး ၃ ေယာက္ရွိတာဘယ္လိုခြဲမလဲ?
လင္မယား ၂ ေယာက္ေတြေဝသြားၿပီးမိနစ္အနည္းငယ္ၾကာစဥ္းစားကာ တရားသူႀကီးမင္းခင္ဗ်ား က်ေနာ္တို႔တစ္ႏွစ္တာအခ်ိန္အတြင္းေနာက္တစ္ေယာက္ထပ္ေမြးၿပီးျပန္လာခဲ့ပါ့မယ္\' ဟုေျပာလိုက္သည္။
၉ လခန႔္ၾကာေသာ္ အႁမႊာပူးေလးေမြးေလသည္။</string>

    <string name="joke_two_title">အလၽွင္မလိုပါ</string>
    <string name="joke_two_content">ေျပးေနေသာ ပီတာေလး ေနာက္ကို ရဲသား တစ္ဦး ေျပးလိုက္ေနသည္ကို၊ လမ္းေထာင့္တြင္ရပ္ေနေသာ ရဲမွုးႀကီး ေတြ႕သျဖင့္ လွမ္းေမးလိုက္သည္။
\"ေဟ့ . .ရဲသား . . မင္းဘာလို႔ ဟိုကေလး ေနာက္ကို အတင္း ေျပးလိုက္ေနရတာလဲ\"
\"သူ ကၽြန္ေတာ့္ကို . . ေနာက္ ဆယ့္ငါးမိနစ္ၾကာရင္ ဖင္ကို လာနမ္းလွည့္လို႔ ေျပာလို႔ပါ ရဲမွုးႀကီး\"
\"ေနာက္ဆယ့္ငါးမိနစ္မွဆို အခ်ိန္ရသားပဲ၊ ဘာလို႔ အတင္းေျပးလိုက္ေနတာလဲ\"</string>

    <string name="joke_three_title">တိုင္းျပည္ကို ေခ်ာက္ထဲမက်ေအာင္ ကယ္လိုက္လို႔ပါ</string>
    <string name="joke_three_content">ဆင္းရဲရာမွ အလြန္ခ်မ္းသာလာေသာ သေဌးမ်ားကို သတင္းတစ္ခုမွ အင္တာဗ်ဴးသည္။
U.S သေဌး။ ။ ကၽြန္ေတာ္ နယူးေယာက္ကိုစေရာက္တုန္းက ေတာ္ေတာ္ဆင္းရဲတာဗ်။ လက္ထဲမွာ ဆင့္ ၅၀ ပဲပါတာနဲ႔ ပန္းသီးတစ္လုံးဝယ္တယ္။ ၁ ေဒၚလာနဲ႔ျပန္ေရာင္းတယ္။ ေနာက္ပန္းသီးႏွစ္လုံး ဝယ္တယ္ ထပ္ေရာင္းတယ္
သတင္းေထာက္။ ။ ဒီလိုနဲ႔မ်ားလာတာေပါ့
U.S သေဌး။ ။ မဟုတ္ဘူးဗ် ပန္းသီးေရာင္းေနရင္း အေဒၚဆုံးသြားလို႔ ေဒၚလာတစ္သန္း အေမြရတယ္ေလ
---------------------------------------
Russia သေဌး။ ။ ကၽြန္ေတာ္အခုေနတဲ့ စံအိမ္ႀကီးက အရင္က ကၽြန္ေတာ္ ဒရိုက္ဘာလုပ္ခဲ့တာေပါ့။
သတင္းေထာက္။ ။ ေအာ္ ဒရိုက္ဘာဘဝကေန သေဌးျဖစ္ေအာင္ ဘယ္လိုလုပ္ခဲ့ရလဲ။
Russia သေဌး။ ။ စံအိမ္ပိုင္ရွင္သေဌးႀကီးရဲ့ သမီးနဲ႔ညားသြားတယ္ေလ
---------------------------------------
သတင္းေထာက္စိတ္ပ်က္လက္ပ်က္ႏွင့္ျမန္မာနိုင္ငံေရာက္လာသည္။
သတင္းေထာက္။ ။ ဟိုေလ ခုလို က်ိက်ိတက္ခ်မ္းသာလာတာဘယ္လိုခ်မ္းသာလာလဲသိခ်င္လို႔ပါ။
ဘဘႀကီး လက္ထဲက ဖတ္လက္စ စာအုပ္ကိုခ်ၿပီး မ်က္ေမွာင္ၾကဳံ႕ၾကည့္သည္။
ဘဘႀကီး။ ။ ဒါကရွင္းပါတယ္။ တိုင္းျပည္ေခ်ာက္ထဲမက်ေအာင္ ကယ္လိုက္ပါတယ္</string>
    <string name="lbl_very_funny">အရမ္း ရီရတယ္</string>
    <string name="lbl_funny">ရီရတယ္</string>
    <string name="msg_no_more_joke">ဟာသမ်ား မရွိေတာ့ပါ</string>
    <string name="lbl_love_the_joke">Love the Joke</string>
    <string name="lbl_search">Search</string>
    <string name="msg_search_jokes_guide">သင္ရွာေဖြလိုုေသာ ဟာသ အမ်ိဳးအစား သိုု့မဟုုတ္ ေရးသားသူ၏ နံမည္ျဖင့္ရွာေဖြနိုုင္ပါသည္</string>

    <string name="left_menu_har_tha_pa_day_thar">ဟာသ ပေဒသာ</string>
    <string name="favourite">Favourite</string>
    <string name="downloaded">Downloaded</string>
    <string name="more">More</string>
    <string name="settings">Settings</string>
</resources>
